<resources>
    <string name="app_name">Calc</string>
    <string name="result">=23456</string>
    <string name="input_display">23+45*56</string>

    <string name="clear">C</string>
    <string name="modulus">%</string>
    <string name="divide">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="all_clear">AC</string>
</resources>