<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inputNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_30_sp"
        android:layout_marginEnd="@dimen/dimen_12_dp"
        app:layout_constraintBottom_toTopOf="@id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textColor="#706E6E"
        android:textSize="@dimen/dimen_30_sp"
        android:layout_marginEnd="@dimen/dimen_12_dp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButtonStyle"
                android:id="@+id/btn_clear"
                android:text="@string/clear" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_back"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/btnBackground2"
                 />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButtonStyle"
                android:id="@+id/btn_mod"
                android:text="@string/modulus" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButtonStyle"
                android:id="@+id/btn_divide"
                android:text="@string/divide" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_7"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_8"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_9"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButtonStyle"
                android:id="@+id/btn_multiply"
                android:text="@string/multiply" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_4"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_5"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_6"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButtonStyle"
                android:id="@+id/btn_add"
                android:text="@string/add" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_1"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_2"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_3"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButtonStyle"
                android:id="@+id/btn_subtract"
                android:text="@string/subtract" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButtonStyle"
                android:id="@+id/btn_all_clear"
                android:textSize="@dimen/dimen_22_sp"
                android:text="@string/all_clear" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_0"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButtonStyle"
                android:id="@+id/btn_dot"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButtonStyle"
                android:id="@+id/btn_equals"
                android:text="@string/equal" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>